# money-bae

./: .env.dev  .env.dev.example  .env.prod  .env.prod.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  backup-db.sh  use-dev-env.sh  use-prod-env.sh
.cargo/: config.toml
infrastructure/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/environments/: dev.cus.tfvars
migrations/2025-11-21-061910-0000_create_incomes/: down.sql  up.sql
migrations/2025-11-21-203952-0000_bills/: down.sql  up.sql
migrations/2025-11-23-041235-0000_create_ledgers/: up.sql
migrations/2025-11-23-041307-0000_create_ledger_bills/: down.sql  up.sql
migrations/2025-11-23-041334-0000_add_ledger_id_to_incomes/: down.sql  up.sql
migrations/2025-11-25-043012-0000_make_ledger_bill_due_day_nullable/: down.sql  up.sql
migrations/2025-11-25-055305-0000_add_ledger_totals_triggers/: down.sql  up.sql
migrations/2025-12-02-195217-0000_ledger_name_total/: down.sql  up.sql
migrations/2025-12-14-152620-0000_create_ptos/: down.sql  up.sql
migrations/2025-12-14-152733-0000_create_pto_plan/: down.sql  up.sql
migrations/2025-12-14-153457-0000_create_holiday_hours/: down.sql  up.sql
migrations/2025-12-15-062148-0000_update_pto_hours_triggers/: down.sql  up.sql
src/: bill_table.rs  common_layout.rs  configuration_manager.rs  db.rs  dependecy_container.rs  dependency_container.rs  income_table.rs  ledger_detail.rs  ledger_table.rs  main.rs  models.rs  pto_detail.rs  pto_logic.rs  pto_table.rs  schema.rs  ui_helpers.rs
src/repositories/: bill_repo.rs  mod.rs  (+5 more)
(+5 files in other folders)
