[package]
name = "money-bae"
version = "0.9.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
cursive_table_view = "0.14"
diesel = { version = "2.2", features = ["postgres", "chrono", "numeric"] }
dotenvy = "0.15"
bigdecimal = "0.4"
log = "0.4"
simplelog = "0.12"
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
